Don't remove YaST reconfig_system marker if called from ignition
If firstboot was triggered by presence of the reconfig_system marker,
ignition-kargs-helper's call to combustion removes the marker and after the
reboot the other firstboot stages would not run. Only remove the marker if it
was an actual combustion run.

--- a/combustion.service
+++ b/combustion.service
@@ -28,7 +28,7 @@ Conflicts=dracut-emergency.service emergency.service emergency.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/combustion
+ExecStart=/usr/bin/combustion --complete
 
 [Install]
 RequiredBy=firstboot.target
