--- a/combustion-prepare.service
+++ b/combustion-prepare.service
@@ -11,6 +11,10 @@ After=dev-combustion-config.device
 # device
 After=ignition-setup-user.service
 
+# This may enable network services in the same way, so make sure the prepare
+# script could write configiguration before networking is enabled.
+Before=ignition-enable-network.service
+
 # This reconfigures networking, which runs during the initqueue (wicked)
 # or has its own service (NM)
 Before=dracut-initqueue.service nm-initrd.service
