Drop wicked to be able to run firstboot-detect.service after initqueue
Some setups like / on LVM need initqueue to get the root device.
This conflicts with wicked which performs network setup during initqueue,
so drop support for wicked entirely.

--- a/combustion.service
+++ b/combustion.service
@@ -12,7 +12,8 @@ Requires=combustion-prepare.service
 After=combustion-prepare.service
 
 # Optionally make network available
-After=network.target
+Wants=network-online.target
+After=network-online.target
 
 # After ignition completed its stuff
 After=ignition-complete.target
