--- a/30firstboot/firstboot-detect.service
+++ b/30firstboot/firstboot-detect.service
@@ -13,9 +13,6 @@ After=systemd-fsck-root.service
 # But before it's actually mounted
 Before=sysroot.mount
 
-# Combustion/ignition may configure networking, so run before nm-initrd.service.
-Before=nm-initrd.service
-
 # Make sure this is stopped before switch root or emergency:
 # https://github.com/systemd/systemd/issues/3436
 Conflicts=initrd-switch-root.target umount.target
@@ -23,6 +20,7 @@ Conflicts=dracut-emergency.service emergency.service emergency.target
 
 [Service]
 Type=oneshot
+RemainAfterExit=yes
 # This has to mount /sysroot as /sysroot, but starting sysroot.mount would
 # screw up ordering
 PrivateMounts=true
