Also order services before NetworkManager-initrd.service
dracut uses the initrd services provided by NetworkManager upstream since
https://github.com/dracut-ng/dracut-ng/commit/83dffc58f606ad7ad47a32716ce240831d7f018f

--- a/30firstboot/firstboot-detect.service
+++ b/30firstboot/firstboot-detect.service
@@ -17,7 +17,7 @@ Before=sysroot.mount
 
 # Combustion/ignition may configure networking, which runs during
 # the initqueue (wicked) or has its own service (NM)
-Before=dracut-initqueue.service nm-initrd.service
+Before=dracut-initqueue.service nm-initrd.service NetworkManager-initrd.service
 
 # Make sure this is stopped before switch root or emergency:
 # https://github.com/systemd/systemd/issues/3436
