--- a/combustion-prepare.service
+++ b/combustion-prepare.service
@@ -17,7 +17,7 @@ Before=ignition-enable-network.service
 
 # This reconfigures networking, which runs during the initqueue (wicked)
 # or has its own service (NM)
-Before=dracut-initqueue.service nm-initrd.service
+Before=dracut-initqueue.service nm-initrd.service NetworkManager-initrd.service
 
 Conflicts=initrd-switch-root.target umount.target
 Conflicts=dracut-emergency.service emergency.service emergency.target
